Curriculum Vitae updated

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -6,7 +6,6 @@
 % Temporarily override \href to remove external link arrow for this section
 \renewcommand{\href}[2]{\hrefWithoutArrow{#1}{#2}}
 
-% ---- Example Experience Entry ----
 \begin{twocolentry}{
     % Location (commented out): Turin, Italy \\
     Apr 2025 - Present % Dates
@@ -20,6 +19,20 @@
         \item Orchestrated end-to-end logistics for STEM events and IT hackathons
         \item Cultivated and managed partnerships with tech companies and keynote speakers
         \item Managed event materials, promotions, and ticketing processes
+    \end{highlights}
+\end{twocolentry}
+
+\vspace{0.2 cm} % Space between entries
+
+\begin{twocolentry}{
+    Oct 2015 - Jul 2024 % Dates
+}
+    \textbf{Local Summer Camps}, Volunteer Youth Leader and Educator
+    \begin{highlights}
+        \item Led the planning and logistics of annual summer camps
+        \item Coordinated daily schedules, task assignments, and material preparation % to ensure smooth operations
+        % \item Mentored and supervised junior youth leaders, supporting them in activity design and group management
+        \item Mentored junior youth leaders in activity planning and group coordination
     \end{highlights}
 \end{twocolentry}
 
