--- a/sections/skills-technologies.tex
+++ b/sections/skills-technologies.tex
@@ -19,5 +19,6 @@
 
 % Soft skills
 \begin{onecolentry}
-    \textbf{Soft Skills:} Problem Solving, Team Collaboration, Analytical Thinking, Continuous Learning
+    \textbf{Soft Skills:}  Analytical Thinking, Problem Solving, Teamwork and Collaboration, Communication, \\ 
+    \text{\hspace{1.68cm}} Continuous Learning, Organizational skills, Leadership
 \end{onecolentry}
