--- a/sections/summary.tex
+++ b/sections/summary.tex
@@ -11,11 +11,12 @@
     % Brief professional/academic interests summary
     \begin{onecolentry}
         Passionate about addressing complex digital security challenges, with interests in system and network security, cryptography, threat detection and intelligence, ethical hacking, security monitoring, and strategic use of threat information and analytics.
+        Music lover and outdoor enthusiast, with a keen interest in hiking and alpinism.
     \end{onecolentry}
 
     \vspace{0.1 cm} % Small vertical space between entries
 
     % Mention of hands-on projects and GitHub link
     \begin{onecolentry}
-        During my academic journey I've completed a variety of hands-on projects, each of which can be found on my \hspace{0em} \mbox{\hrefWithoutArrow{https://github.com/eliainnocenti}{{\footnotesize\faGithub}\hspace*{0.13cm}Github}}.
+        During my academic journey I've completed a variety of hands-on \textbf{projects}, each of which can be found on my \hspace{0em} \mbox{\hrefWithoutArrow{https://github.com/eliainnocenti}{{\footnotesize\faGithub}\hspace*{0.13cm}Github}}.
     \end{onecolentry}
