--- a/src/sections/experience.tex
+++ b/src/sections/experience.tex
@@ -1,6 +1,7 @@
 % ---------------------------
 % Experience Section
 % ---------------------------
+
 \section{Experience}
 
 % Temporarily override \href to remove external link arrow for this section
@@ -12,13 +13,13 @@
 }
     \textbf{\href{https://hknpolito.org}{Mu Nu Chapter} of IEEE-Eta Kappa Nu}, Member of Logistics and Fundraising
     \begin{highlights}
-        % Example of more detailed highlights (commented out)
         % \item Orchestrated end‑to‑end logistics for hackathons and IT competitions, securing venues, materials, and on‑site support
         % \item Cultivated and managed partnerships with tech companies and keynote speakers to drive sponsorship and industry engagement
         % \item Designed and executed fundraising campaigns, overseeing budgets and resource allocation to fuel STEM events
         \item Orchestrated end-to-end logistics for STEM events and IT hackathons
         \item Cultivated and managed partnerships with tech companies and keynote speakers
-        \item Managed event materials, promotions, and ticketing processes
+        \item Collaborated with: \textit{ARM}, \textit{NXP}, \textit{STMicroelectronics}, and more
+        % \item Managed event materials, promotions, and ticketing processes
     \end{highlights}
 \end{twocolentry}
 
@@ -30,8 +31,7 @@
     \textbf{Local Summer Camps}, Volunteer Youth Leader and Educator
     \begin{highlights}
         \item Led the planning and logistics of annual summer camps
-        \item Coordinated daily schedules, task assignments, and material preparation % to ensure smooth operations
-        % \item Mentored and supervised junior youth leaders, supporting them in activity design and group management
+        % \item Coordinated daily schedules, task assignments, and material preparation
         \item Mentored junior youth leaders in activity planning and group coordination
     \end{highlights}
 \end{twocolentry}
