--- a/src/sections/education.tex
+++ b/src/sections/education.tex
@@ -1,6 +1,7 @@
 % ---------------------------
 % Education Section
 % ---------------------------
+
 \section{Education}
 
 % Temporarily override \href to remove external link arrow for this section
@@ -14,8 +15,9 @@
   {Sept 2024 - Present} % Dates
   \begin{adjustwidth}{1cm}{0pt}
     \begin{highlights}
-      \item Main courses: 
-      \textit{Information System Security, Machine Learning for Networking, \\ Cryptography, Hardware and Wireless Security}
+      % \item Main courses: 
+      % \textit{Information System Security, Machine Learning for Networking, \\ Cryptography, Hardware and Wireless Security}
+      \item English-taught master's program compatible with \href{https://digital-skills-jobs.europa.eu/en/inspiration/resources/ecsos-minimum-reference-curriculum}{ECSO}'s curriculum standards.
     \end{highlights}
   \end{adjustwidth}
 \end{entrywithdate}
@@ -30,8 +32,8 @@
   {Sept 2021 - Sept 2024} % Dates
   \begin{adjustwidth}{1cm}{0pt}
     \begin{highlights}
-      \item Main courses: 
-      \textit{Mathematical Analysis, Linear Algebra, Physics, Calculus, Software \\ Engineering, Artificial Intelligence, Discrete Mathematics and Coding Theory}
+      % \item Main courses: 
+      % \textit{Mathematical Analysis, Linear Algebra, Physics, Calculus, Software \\ Engineering, Artificial Intelligence, Discrete Mathematics and Coding Theory}
       \item \textbf{Thesis:} "Object detection for landmark recognition in smart tourism applications" \\ (\textit{Topics: Computer Vision, Deep Learning, Edge Computing})
     \end{highlights}
   \end{adjustwidth}
