--- a/src/sections/skills-technologies.tex
+++ b/src/sections/skills-technologies.tex
@@ -1,24 +1,25 @@
 % ---------------------------
 % Skills and Technologies Section
 % ---------------------------
+
 \section{Skills and Technologies}
 
 % Programming and markup languages
 \begin{onecolentry}
-    \textbf{Programming \& Markup Languages:} C/C++, Python, Java, SQL, LaTeX, Markdown, Bash/Shell
+    \textbf{Programming and Markup Languages:} C/C++, Python, Java, JavaScript, SQL, LaTeX, Markdown, Bash/Shell
 \end{onecolentry}
 
 \vspace{0.2 cm} % Space between entries
 
 % Technologies and tools
 \begin{onecolentry}
-    \textbf{Technologies:} OS X, Linux, Jupyter Notebook, Git, Github, Docker
+    \textbf{Technologies and Tools:} OS X, Linux, Jupyter Notebook, Git, Github, Docker, Wireshark, Kali Linux
 \end{onecolentry}
 
 \vspace{0.2 cm} % Space between entries
 
 % Soft skills
 \begin{onecolentry}
-    \textbf{Soft Skills:}  Analytical Thinking, Problem Solving, Teamwork and Collaboration, Communication, \\ 
-    \text{\hspace{1.68cm}} Continuous Learning, Organizational skills, Leadership
+    \textbf{Soft Skills:}  Analytical Thinking, Problem Solving, Teamwork and Collaboration, Communication, Leadership,\\ 
+    \text{\hspace{1.68cm}} Continuous Learning, Organizational skills
 \end{onecolentry}
