Curriculum Vitae updated

--- a/src/main.tex
+++ b/src/main.tex
@@ -36,6 +36,21 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% ATS-related enhancements
+% \input{ats/ats-friendly.tex}
+% \input{ats/ats-hack.tex}
+
+% \hypersetup{
+%     pdftitle={\PDFTitle},
+%     pdfauthor={\PDFAuthor},
+%     pdfsubject={\PDFSubject},
+%     pdfkeywords={\PDFKeywords},
+%     colorlinks=true,
+%     urlcolor=primaryColor
+% }
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{document}
 
     % \placelastupdatedtext
