--- a/src/sections/_merged-certs-languages.tex
+++ b/src/sections/_merged-certs-languages.tex
@@ -38,6 +38,6 @@
     \vspace{0.2 cm}
     
     \begin{onecolentry}
-        \textbf{English:} Professional working proficiency
+        \textbf{English:} Professional working proficiency (FCE)
     \end{onecolentry}
 \end{sidebysections}
