--- a/src/sections/education.tex
+++ b/src/sections/education.tex
@@ -15,9 +15,10 @@
   {Sept 2024 - Present} % Dates
   \begin{adjustwidth}{1cm}{0pt}
     \begin{highlights}
+      % TODO: add relevant coursework?
       % \item Main courses: 
       % \textit{Information System Security, Machine Learning for Networking, \\ Cryptography, Hardware and Wireless Security}
-      \item English-taught master's program compatible with \href{https://digital-skills-jobs.europa.eu/en/inspiration/resources/ecsos-minimum-reference-curriculum}{ECSO}'s curriculum standards.
+      \item English-taught master's program compatible with \href{https://digital-skills-jobs.europa.eu/en/inspiration/resources/ecsos-minimum-reference-curriculum}{ECSO}'s curriculum standards
     \end{highlights}
   \end{adjustwidth}
 \end{entrywithdate}
@@ -32,9 +33,7 @@
   {Sept 2021 - Sept 2024} % Dates
   \begin{adjustwidth}{1cm}{0pt}
     \begin{highlights}
-      % \item Main courses: 
-      % \textit{Mathematical Analysis, Linear Algebra, Physics, Calculus, Software \\ Engineering, Artificial Intelligence, Discrete Mathematics and Coding Theory}
-      \item \textbf{Thesis:} "Object detection for landmark recognition in smart tourism applications" \\ (\textit{Topics: Computer Vision, Deep Learning, Edge Computing})
+      \item \href{https://doi.org/10.5281/zenodo.17382281}{Bachelor's Thesis}, \hspace{0.05em} \textit{topics: Computer Vision, Deep Learning, Edge Computing}
     \end{highlights}
   \end{adjustwidth}
 \end{entrywithdate}
