--- a/src/sections/experience.tex
+++ b/src/sections/experience.tex
@@ -11,30 +11,25 @@
     % Location (commented out): Turin, Italy \\
     Apr 2025 - Present % Dates
 }
-    \textbf{\href{https://hknpolito.org}{Mu Nu Chapter} of IEEE-Eta Kappa Nu}, Member of Logistics and Fundraising
+    \textbf{Member} of \textbf{\href{https://hknpolito.org}{Mu Nu Chapter} of IEEE-Eta Kappa Nu}, \textit{Merit-based} \href{https://hkn.ieee.org}{IEEE's Honor Society}
     \begin{highlights}
-        % \item Orchestrated end‑to‑end logistics for hackathons and IT competitions, securing venues, materials, and on‑site support
-        % \item Cultivated and managed partnerships with tech companies and keynote speakers to drive sponsorship and industry engagement
-        % \item Designed and executed fundraising campaigns, overseeing budgets and resource allocation to fuel STEM events
-        \item Orchestrated end-to-end logistics for STEM events and IT hackathons
-        \item Cultivated and managed partnerships with tech companies and keynote speakers
-        \item Collaborated with: \textit{ARM}, \textit{NXP}, \textit{STMicroelectronics}, and more
-        % \item Managed event materials, promotions, and ticketing processes
+        \item Orchestrated STEM events and hackathons, driving technical innovation and student engagement
+        \item Cultivated and managed partnerships with tech companies (\textit{ARM}, \textit{NXP}, \textit{STMicroelectronics}, and more)
+        \item Developed advanced project management and stakeholder coordination skills % through organizing high-profile technical events
     \end{highlights}
 \end{twocolentry}
 
 \vspace{0.2 cm} % Space between entries
 
-\begin{twocolentry}{
-    Oct 2015 - Jul 2024 % Dates
+\begin{twocolentryL}{
+    % 2015 - 2024 % Dates
+    \textit{About} 10 years
 }
-    \textbf{Local Summer Camps}, Volunteer Youth Leader and Educator
+    \textbf{Volunteer Youth Leader and Educator}, Local Summer Camps
     \begin{highlights}
-        \item Led the planning and logistics of annual summer camps
-        % \item Coordinated daily schedules, task assignments, and material preparation
-        \item Mentored junior youth leaders in activity planning and group coordination
+        \item Led the planning and logistics, mentored junior youth leaders in activity planning and group coordination
     \end{highlights}
-\end{twocolentry}
+\end{twocolentryL}
 
 % Restore \href to include external link arrow for the rest of the document
 \renewcommand{\href}[2]{\hrefWithoutArrow{#1}{\ifthenelse{\equal{#2}{}}{ }{#2 }\raisebox{.15ex}{\footnotesize \faExternalLink*}}}
