--- a/src/sections/projects.tex
+++ b/src/sections/projects.tex
@@ -13,7 +13,8 @@
         \textbf{\mbox{\hrefWithoutArrow{https://github.com/eliainnocenti/Service-Mesh}{{\footnotesize\faGithub}\hspace*{0.13cm}}}Service Mesh Research}, @ PoliTo
         \begin{highlights}
             \item Analysis of service mesh architectures and security
-            \item Comparative study of cloud-native implementations
+            % \item Comparative study of cloud-native implementations
+            \item \textit{Microservices, Distributed Systems, Cloud Security}
         \end{highlights}
     }{
         % Dates
@@ -23,10 +24,11 @@
     
     % Right column - Second project
     \projectentry{
-        \textbf{\mbox{\hrefWithoutArrow{https://github.com/eliainnocenti/Secure-Timeout-System-NXPS32K3X8EVB}{{\footnotesize\faGithub}\hspace*{0.13cm}}}Secure Timeout System on NXP}, @ PoliTo
+        \textbf{\mbox{\hrefWithoutArrow{https://github.com/eliainnocenti/Secure-Timeout-System-NXPS32K3X8EVB}{{\footnotesize\faGithub}\hspace*{0.13cm}}}Secure Timeout System on NXP board}, @ PoliTo
         \begin{highlights}
             \item QEMU emulation with FreeRTOS integration
-            \item Multi-task secure timeout with UART comms
+            % \item Multi-task secure timeout with UART comms
+            \item \textit{Embedded Systems, Real-time Operating Systems}
         \end{highlights}
     }{
         % Dates
@@ -38,8 +40,9 @@
     \projectentry{
         \textbf{\mbox{\hrefWithoutArrow{https://github.com/eliainnocenti/SSH-Shell-Attacks}{{\footnotesize\faGithub}\hspace*{0.13cm}}}SSH Shell Attacks Analysis}, @ PoliTo
         \begin{highlights}
-            \item ML classification of 230k SSH attacks
-            \item Pattern analysis with clustering and NLP
+            \item ML classification of 230k SSH attacks (honeypot data)
+            % \item Pattern analysis with clustering and NLP
+            \item \textit{Machine Learning, Data Analysis, Pattern Recognition}
         \end{highlights}
     }{
         % Dates
@@ -52,7 +55,8 @@
         \textbf{\mbox{\hrefWithoutArrow{https://github.com/eliainnocenti/ReInHerit-SmartTourism}{{\footnotesize\faGithub}\hspace*{0.13cm}}}ReInHerit - Smart Tourism}, @ UniFi
         \begin{highlights}
             \item Android app for monument object detection
-            \item Computer vision alternative to image retrieval
+            % \item Computer vision alternative to image retrieval
+            \item \textit{Computer Vision, Mobile Development, Deep Learning}
         \end{highlights}
     }{
         % Dates
