--- a/src/sections/skills-technologies.tex
+++ b/src/sections/skills-technologies.tex
@@ -6,20 +6,20 @@
 
 % Programming and markup languages
 \begin{onecolentry}
-    \textbf{Programming and Markup Languages:} C/C++, Python, Java, JavaScript, SQL, LaTeX, Markdown, Bash/Shell
+    \textbf{Programming and Markup Languages:} C/C++, Python, Java, JavaScript, SQL, LaTeX, Markdown, Bash/Shell, Assembly, Proverif
 \end{onecolentry}
 
 \vspace{0.2 cm} % Space between entries
 
 % Technologies and tools
 \begin{onecolentry}
-    \textbf{Technologies and Tools:} OS X, Linux, Jupyter Notebook, Git, Github, Docker, Wireshark, Kali Linux
+    \textbf{Technologies and Tools:} OS X, Linux, Jupyter Notebook, Git, Github, Docker, Kali Linux, Metasploit, openssl, nmap, Wireshark
 \end{onecolentry}
 
 \vspace{0.2 cm} % Space between entries
 
 % Soft skills
 \begin{onecolentry}
-    \textbf{Soft Skills:}  Analytical Thinking, Problem Solving, Teamwork and Collaboration, Communication, Leadership,\\ 
-    \text{\hspace{1.68cm}} Continuous Learning, Organizational skills
+    \textbf{Soft Skills:}  Analytical Thinking, Problem Solving, Teamwork and Collaboration, Communication, Leadership, Eclecticism,\\ 
+    \text{\hspace{1.68cm}} Continuous Learning, Organizational skills, Workload Prioritization
 \end{onecolentry}
