--- a/src/sections/summary.tex
+++ b/src/sections/summary.tex
@@ -6,7 +6,9 @@
 
     % Brief professional/academic interests summary
     \begin{onecolentry}
-        Passionate about addressing complex digital security challenges, with interests in system and network security, cryptography, threat detection and intelligence, ethical hacking, security monitoring, and strategic use of threat information and analytics.
+        \textbf{Computer Engineer}, currently completing a Master's in \textbf{Cybersecurity Engineering}. 
+        Passionate about addressing complex digital security challenges, with interests in system and network security, threat detection and intelligence, ethical hacking, security monitoring, and strategic use of informations and analytics.
+        Analytical thinker with strong collaborative skills, effective workload prioritization, and continuous learning mindset.
         Music lover and outdoor enthusiast, with a keen interest in hiking and alpinism.
     \end{onecolentry}
 
